--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -96,14 +96,14 @@
 }
 
 .article-toc .toc-title {
-    margin-left: 1.2rem;
+    margin-left: 1rem;
     padding-bottom: .6rem;
     margin-bottom: .8rem;
     border-bottom: 1px solid #e4e6eb;
 }
 
 .article-toc ul {
-    padding-left: 1.2rem;
+    padding-left: 1rem;
     list-style-type: none;
 }
 
@@ -234,6 +234,76 @@ pre {
 #icon-next-blog {
     right: 2%;
 }
+
+/*subject start*/
+.subject-col-7 {
+    flex: 0 0 60%;
+    max-width: 60%;
+}
+
+.subject-col-2 {
+    flex: 0 0 20%;
+    max-width: 20%;
+}
+
+
+.subject-block {
+    padding-right: 0;
+}
+
+.toc-block {
+    padding-left: 0;
+}
+
+.subject-list {
+    position: fixed;
+    width: 19%;
+    overflow: auto;
+    background: white;
+    padding: 1rem 1rem 0.2rem 0;
+}
+
+.subject-list .toc-title {
+    margin-left: 1rem;
+    padding-bottom: 0.6rem;
+    margin-bottom: 0.8rem;
+    border-bottom: 1px solid #e4e6eb;
+}
+
+.subject-article-list ul {
+    padding-left: 1rem;
+    list-style-type: none;
+}
+
+.subject-article-list a.active::before {
+    background-color: #e83e8c;
+}
+
+.subject-article-list a.active {
+    position: relative;
+}
+
+.subject-article-list a::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    border-radius: 2px;
+    left: -1rem;
+    height: 100%;
+    width: 2px;
+}
+
+.subject-article-list li {
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+}
+
+.subject-list,
+.toc-block .article-toc {
+    max-height: 43rem;
+}
+
+/*subject end*/
 
 /* Small devices (landscape phones, 576px and up) */
 /* X-iPhone6 AND plus */
