修改静态文件版本定义

--- a/apps/blog/templates/blog/articleEdit.html
+++ b/apps/blog/templates/blog/articleEdit.html
@@ -63,7 +63,7 @@
             });
         });
     </script>
-    <script src="{% static 'blog/js/article.js' %}?v20230711.4"></script>
+    <script src="{% static 'blog/js/article.js' %}?v={{ static_version.js_blog_article }}"></script>
     <script>
         $('#save-article').click(function () {
             article_update_save("{{ csrf_token }}", "{% url 'blog:article_update' %}", "{{ article.slug }}")
