--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -11,7 +11,7 @@
 
 
 {% block top-file %}
-<link href="{% static 'tool/css/tool.css' %}?v=20230508.01" rel="stylesheet">
+<link href="{% static 'tool/css/tool.css' %}?v={{ static_version.css_tool_tool }}" rel="stylesheet">
 {% endblock %}
 
 {% block base_content %}
