--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -14,7 +14,7 @@
     {% if user.is_authenticated %}
         <link href="https://cdn.bootcss.com/simplemde/1.11.2/simplemde.min.css" rel="stylesheet">
     {% endif %}
-    <link href="{% static 'blog/css/detail.css' %}?v=20230713.1" rel="stylesheet">
+    <link href="{% static 'blog/css/detail.css' %}?v={{ static_version.css_blog_detail }}" rel="stylesheet">
     <link href="{% static 'blog/css/monokai.css' %}?v=20230611.42" rel="stylesheet">
     <link href="{% static 'comment/css/base_comment.css' %}?v=20190114.554" rel="stylesheet">
 {% endblock %}
@@ -121,7 +121,7 @@
 {% endblock %}
 
 {% block end_file %}
-    <script src="{% static 'blog/js/code.js' %}?v=20230703.1"></script>
+    <script src="{% static 'blog/js/code.js' %}?v={{ static_version.js_blog_code }}"></script>
     <script>
         {#文章里面的外链单独打开#}
         const links = document.querySelectorAll('#article a');
