--- a/apps/blog/templates/blog/subjectDetail.html
+++ b/apps/blog/templates/blog/subjectDetail.html
@@ -32,7 +32,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-lg-2 d-none d-lg-block subject-col-2 subject-block">
-                <div class="subject-list f-14 bg-white rounded-6">
+                <div class="subject-list f-14 rounded-6">
                     <div class="toc-title f-15"><strong>{{ article.category.name }}</strong></div>
                     <div class="subject-article-list">
                         {% get_subject_article_list article.category as subject_articles %}
