延迟加载markdown编辑器静态文件

--- a/apps/tool/templates/tool/editor.html
+++ b/apps/tool/templates/tool/editor.html
@@ -71,7 +71,7 @@ base_vars = safe_load(vars_string)
 
 ### Images
 
-![部署博客](https://tendcode.com/cdn/article/180418/bsblog.png "部署博客")</textarea>
+![izone]({% static 'blog/img/favicon.ico' %} "izone")</textarea>
     </div>
 </div>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
