添加专题页面

--- a/apps/blog/templates/blog/subject.html
+++ b/apps/blog/templates/blog/subject.html
@@ -37,7 +37,7 @@
                         <li class="breadcrumb-item">
                             <a href="{% url 'blog:subject_index' %}">专题</a>
                         </li>
-                        <li class="breadcrumb-item active d-none d-md-block"
+                        <li class="breadcrumb-item active"
                             aria-current="page">{{ subject.name }}</li>
                     </ol>
                 </nav>
