添加专题页面

--- a/apps/blog/templates/blog/subject.html
+++ b/apps/blog/templates/blog/subject.html
@@ -53,7 +53,7 @@
                                 <span class="text-{{ subject.get_status_color }}">{{ subject.get_status_display }}</span>
                             </span>
                         </div>
-                        <div class="alert alert-{{ subject.get_status_color }} my-3 mx-1" role="alert">
+                        <div class="alert alert-info my-3 mx-1" role="alert">
                             <h3>专题简介</h3>
                             <hr class="mt-0">
                             <p class="mb-0">{{ subject.description }}</p>
