--- a/apps/blog/templates/blog/subject.html
+++ b/apps/blog/templates/blog/subject.html
@@ -37,8 +37,14 @@
                         <li class="breadcrumb-item">
                             <a href="{% url 'blog:subject_index' %}">专题</a>
                         </li>
-                        <li class="breadcrumb-item active"
-                            aria-current="page">{{ subject.name }}</li>
+                        <li class="breadcrumb-item active" aria-current="page">
+                            {% if user.is_superuser %}
+                                <a class="edit-blog" href="{% url 'admin:blog_subject_change' subject.pk %}"
+                                   target="_blank" title="后台编辑专题">{{ subject.name }}</a>
+                            {% else %}
+                                {{ subject.name }}
+                            {% endif %}
+                        </li>
                     </ol>
                 </nav>
                 <div class="card border-0 rounded-6 mb-3">
@@ -62,7 +68,14 @@
                             {% for topic in subject.get_topics %}
                                 {% if topic.get_articles %}
                                     <li>
-                                        <div class="text-info">{{ topic.name }}</div>
+                                        <div class="text-info">
+                                            {% if user.is_superuser %}
+                                                <a class="edit-blog" href="{% url 'admin:blog_topic_change' topic.pk %}"
+                                                   target="_blank" title="后台编辑主题">{{ topic.name }}</a>
+                                            {% else %}
+                                                {{ topic.name }}
+                                            {% endif %}
+                                        </div>
                                         <ul class="pl-2">
                                             {% for article in topic.get_articles %}
                                                 <li class="">
