--- a/apps/blog/templates/blog/friend.html
+++ b/apps/blog/templates/blog/friend.html
@@ -25,7 +25,10 @@
                                      style='background-image: url("{{ friend.logo.url }}");'>
                                     <div class="friend-img">
                                         <img src="{{ friend.logo.url }}" alt="{{ friend.description }}">
-                                        <div class="friend-description">{{ friend.description }}</div>
+                                        <div class="friend-description">
+                                            {{ friend.description|slice:":23" }}
+                                            {% if friend.description|length > 23 %}...{% endif %}
+                                        </div>
                                     </div>
                                     <div class="friend-title"><span>{{ friend.name }}</span></div>
                                 </div>
