--- a/apps/blog/templates/blog/subjectIndex.html
+++ b/apps/blog/templates/blog/subjectIndex.html
@@ -25,8 +25,7 @@
                                     </small>
                                 </div>
                                 <p class="card-text subject-desc">
-                                    {{ subject.description|truncatechars:48 }}
-                                    {% if subject.description|length > 48 %}...{% endif %}
+                                    {{ subject.description|my_slice:':48' }}
                                 </p>
                             </div>
                         </a>
